--- a/Develop/index.html
+++ b/Develop/index.html
@@ -25,6 +25,37 @@
       <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#formModal">Add Task</button>
     </div>
     <!-- Todo: Create a modal with a form to add tasks -->
+    <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="formModalLabel">Add New Task</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="task-form">
+              <div class="mb-3">
+                <label for="task-title" class="form-label">Title</label>
+                <input type="text" class="form-control" id="task-title" required />
+              </div>
+              <div class="mb-3">
+                <label for="task-description" class="form-label">Description</label>
+                <textarea class="form-control" id="task-description" rows="3" required></textarea>
+              </div>
+              <div class="mb-3">
+                <label for="task-due-date" class="form-label">Deadline</label>
+                <input type="date" class="form-control" id="task-due-date" required />
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn btn-primary" id="saveTaskButton" form="task-form">Save Task</button>
+              </div>
+            </form>
+          </div>
+         
+        </div>
+      </div>
+    </div>
     <div class="row swim-lanes text-center justify-content-between">
       <div class="col-12 col-lg-4 d-flex">
         <div id="to-do" class="card border-light mb-3 lane flex-grow-1">
@@ -32,7 +63,7 @@
             <h2 class="card-title mb-1">To Do</h2>
           </div>
           <div class="card-body bg-light">
-            <div id="todo-cards"></div>
+            <div id="to-do-cards"></div>
           </div>
         </div>
       </div>
